ENH:updated German translation
Change-Id: Id7a62e1cc4b1e42d6af94aefc1f6fb75164eb321

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-01 11:55+0800\n"
+"POT-Creation-Date: 2022-11-03 16:29+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -722,6 +722,18 @@ msgid "Scale to build volume"
 msgstr ""
 
 msgid "Scale an object to fit the build volume"
+msgstr ""
+
+msgid "Flush Options"
+msgstr ""
+
+msgid "Flush into objects' infill"
+msgstr ""
+
+msgid "Flush into this object"
+msgstr ""
+
+msgid "Flush into objects' support"
 msgstr ""
 
 msgid "Convert from inch"
@@ -3822,7 +3834,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Please check the following infomation:\n"
+msgid ""
+"Please check the following infomation and click Confirm to continue sending "
+"print:\n"
 msgstr ""
 
 msgid ""
@@ -4226,7 +4240,8 @@ msgstr ""
 
 msgid ""
 "You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching preset?"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
 msgstr ""
 
 msgid "Extruders count"
@@ -6584,9 +6599,6 @@ msgstr ""
 msgid "Width of prime tower"
 msgstr ""
 
-msgid "Flush into objects' infill"
-msgstr ""
-
 msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
@@ -6594,16 +6606,10 @@ msgid ""
 "outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
-msgid "Flush into objects' support"
-msgstr ""
-
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
 "lower the amount of waste and decrease the print time. It will not take "
 "effect, unless the prime tower is enabled."
-msgstr ""
-
-msgid "Flush into this object"
 msgstr ""
 
 msgid ""
