--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-01 11:55+0800\n"
+"POT-Creation-Date: 2022-11-03 16:29+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -744,6 +744,18 @@ msgstr "Auf Druckvolumen skalieren"
 
 msgid "Scale an object to fit the build volume"
 msgstr "Objekt skalieren, dass es in den Druckraum passt"
+
+msgid "Flush Options"
+msgstr ""
+
+msgid "Flush into objects' infill"
+msgstr "Druckdüse in der Füllung der Objekte säubern"
+
+msgid "Flush into this object"
+msgstr "Druckdüse in diesem Objekt säubern"
+
+msgid "Flush into objects' support"
+msgstr "Druckdüse in der Supportstruktur des Objekts säubern"
 
 msgid "Convert from inch"
 msgstr "Von Inch umrechnen"
@@ -2621,7 +2633,7 @@ msgid "Show object labels in 3D scene"
 msgstr ""
 
 msgid "Preferences"
-msgstr "Vorlieben"
+msgstr "Einstellungen"
 
 msgid "View"
 msgstr "Ansicht"
@@ -4032,7 +4044,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Please check the following infomation:\n"
+msgid ""
+"Please check the following infomation and click Confirm to continue sending "
+"print:\n"
 msgstr ""
 
 msgid ""
@@ -4484,11 +4498,9 @@ msgstr ""
 
 msgid ""
 "You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching preset?"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
 msgstr ""
-"Sie haben einige voreingestellte Einstellungen geändert. \n"
-"Möchten Sie diese geänderten Einstellungen nach dem Wechsel der "
-"Voreinstellung beibehalten?"
 
 msgid "Extruders count"
 msgstr "Anzahl der Extruder"
@@ -7138,9 +7150,6 @@ msgstr "Breite"
 msgid "Width of prime tower"
 msgstr "Breite des Prime-Turms"
 
-msgid "Flush into objects' infill"
-msgstr "Druckdüse in der Füllung der Objekte säubern"
-
 msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
@@ -7148,17 +7157,11 @@ msgid ""
 "outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
-msgid "Flush into objects' support"
-msgstr "Druckdüse in der Supportstruktur des Objekts säubern"
-
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
 "lower the amount of waste and decrease the print time. It will not take "
 "effect, unless the prime tower is enabled."
 msgstr ""
-
-msgid "Flush into this object"
-msgstr "Druckdüse in diesem Objekt säubern"
 
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
@@ -7528,6 +7531,14 @@ msgid ""
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
 msgstr ""
+
+#~ msgid ""
+#~ "You have changed some preset settings. \n"
+#~ "Would you like to keep these changed settings after switching preset?"
+#~ msgstr ""
+#~ "Sie haben einige voreingestellte Einstellungen geändert. \n"
+#~ "Möchten Sie diese geänderten Einstellungen nach dem Wechsel der "
+#~ "Voreinstellung beibehalten?"
 
 #~ msgid "Export sliced file"
 #~ msgstr "Geslicete Datei exportieren"
