--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-01 11:55+0800\n"
+"POT-Creation-Date: 2022-11-03 16:29+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -743,6 +743,18 @@ msgstr "Átméretezés a nyomtatótérhez"
 
 msgid "Scale an object to fit the build volume"
 msgstr "Átméretez egy objektumot, hogy beférjen a nyomtatótérbe"
+
+msgid "Flush Options"
+msgstr ""
+
+msgid "Flush into objects' infill"
+msgstr "Öblítés a tárgyak kitöltésébe"
+
+msgid "Flush into this object"
+msgstr "Öblítés ebbe a tárgyba"
+
+msgid "Flush into objects' support"
+msgstr "Öblítés a tárgyak támaszába"
 
 msgid "Convert from inch"
 msgstr "Átváltás hüvelykről"
@@ -4012,7 +4024,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Please check the following infomation:\n"
+msgid ""
+"Please check the following infomation and click Confirm to continue sending "
+"print:\n"
 msgstr ""
 
 msgid ""
@@ -4452,11 +4466,9 @@ msgstr ""
 
 msgid ""
 "You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching preset?"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
 msgstr ""
-"Megváltoztattál néhány beállítást.\n"
-"Szeretnéd megtartani ezeket a megváltozott beállításokat az előbeállítás "
-"váltás után?"
 
 msgid "Extruders count"
 msgstr "Extruderek száma"
@@ -7090,9 +7102,6 @@ msgstr "Szélesség"
 msgid "Width of prime tower"
 msgstr "This is the width of prime towers."
 
-msgid "Flush into objects' infill"
-msgstr "Öblítés a tárgyak kitöltésébe"
-
 msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
@@ -7100,17 +7109,11 @@ msgid ""
 "outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
-msgid "Flush into objects' support"
-msgstr "Öblítés a tárgyak támaszába"
-
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
 "lower the amount of waste and decrease the print time. It will not take "
 "effect, unless the prime tower is enabled."
 msgstr ""
-
-msgid "Flush into this object"
-msgstr "Öblítés ebbe a tárgyba"
 
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
@@ -7472,6 +7475,14 @@ msgid ""
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
 msgstr ""
+
+#~ msgid ""
+#~ "You have changed some preset settings. \n"
+#~ "Would you like to keep these changed settings after switching preset?"
+#~ msgstr ""
+#~ "Megváltoztattál néhány beállítást.\n"
+#~ "Szeretnéd megtartani ezeket a megváltozott beállításokat az előbeállítás "
+#~ "váltás után?"
 
 #~ msgid "Export sliced file"
 #~ msgstr "Szeletelt fájl exportálása"
