--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-01 11:55+0800\n"
+"POT-Creation-Date: 2022-11-03 16:29+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -733,6 +733,18 @@ msgstr "Scale to build volume"
 
 msgid "Scale an object to fit the build volume"
 msgstr "Scale an object to fit the build volume"
+
+msgid "Flush Options"
+msgstr ""
+
+msgid "Flush into objects' infill"
+msgstr "Flush into objects' infill"
+
+msgid "Flush into this object"
+msgstr "Flush into this object"
+
+msgid "Flush into objects' support"
+msgstr "Flush into objects' support"
 
 msgid "Convert from inch"
 msgstr "Convert from Inch"
@@ -3966,7 +3978,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Please check the following infomation:\n"
+msgid ""
+"Please check the following infomation and click Confirm to continue sending "
+"print:\n"
 msgstr ""
 
 msgid ""
@@ -4400,10 +4414,9 @@ msgstr ""
 
 msgid ""
 "You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching preset?"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
 msgstr ""
-"You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching presets?"
 
 msgid "Extruders count"
 msgstr "Extruder count"
@@ -7005,9 +7018,6 @@ msgstr "Width"
 msgid "Width of prime tower"
 msgstr "This is the width of prime towers."
 
-msgid "Flush into objects' infill"
-msgstr "Flush into objects' infill"
-
 msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
@@ -7015,17 +7025,11 @@ msgid ""
 "outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
-msgid "Flush into objects' support"
-msgstr "Flush into objects' support"
-
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
 "lower the amount of waste and decrease the print time. It will not take "
 "effect, unless the prime tower is enabled."
 msgstr ""
-
-msgid "Flush into this object"
-msgstr "Flush into this object"
 
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
@@ -7386,6 +7390,13 @@ msgid ""
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
 msgstr ""
+
+#~ msgid ""
+#~ "You have changed some preset settings. \n"
+#~ "Would you like to keep these changed settings after switching preset?"
+#~ msgstr ""
+#~ "You have changed some preset settings. \n"
+#~ "Would you like to keep these changed settings after switching presets?"
 
 #~ msgid "Export sliced file"
 #~ msgstr "Export Sliced File"
