--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-01 11:55+0800\n"
+"POT-Creation-Date: 2022-11-03 16:29+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -746,6 +746,18 @@ msgstr "Escala para la impresión del volumen"
 
 msgid "Scale an object to fit the build volume"
 msgstr "Escalar un objeto para que se ajuste al volumen de impresión"
+
+msgid "Flush Options"
+msgstr ""
+
+msgid "Flush into objects' infill"
+msgstr "Purgar en el relleno de los objetos"
+
+msgid "Flush into this object"
+msgstr "Descarga en este objeto"
+
+msgid "Flush into objects' support"
+msgstr "Depositar en el soporte de los objetos"
 
 msgid "Convert from inch"
 msgstr "Convertir desde pulgadas"
@@ -4030,7 +4042,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Please check the following infomation:\n"
+msgid ""
+"Please check the following infomation and click Confirm to continue sending "
+"print:\n"
 msgstr ""
 
 msgid ""
@@ -4476,10 +4490,9 @@ msgstr ""
 
 msgid ""
 "You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching preset?"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
 msgstr ""
-"Has cambiado algunos ajustes de preajuste. \n"
-"¿Desea mantener estos ajustes cambiados después de cambiar de preajuste?"
 
 msgid "Extruders count"
 msgstr "Contador de extrusores"
@@ -7128,9 +7141,6 @@ msgstr "Ancho"
 msgid "Width of prime tower"
 msgstr "Anchura de la torre principal"
 
-msgid "Flush into objects' infill"
-msgstr "Purgar en el relleno de los objetos"
-
 msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
@@ -7138,17 +7148,11 @@ msgid ""
 "outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
-msgid "Flush into objects' support"
-msgstr "Depositar en el soporte de los objetos"
-
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
 "lower the amount of waste and decrease the print time. It will not take "
 "effect, unless the prime tower is enabled."
 msgstr ""
-
-msgid "Flush into this object"
-msgstr "Descarga en este objeto"
 
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
@@ -7513,6 +7517,13 @@ msgid ""
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
 msgstr ""
+
+#~ msgid ""
+#~ "You have changed some preset settings. \n"
+#~ "Would you like to keep these changed settings after switching preset?"
+#~ msgstr ""
+#~ "Has cambiado algunos ajustes de preajuste. \n"
+#~ "¿Desea mantener estos ajustes cambiados después de cambiar de preajuste?"
 
 #~ msgid "Export sliced file"
 #~ msgstr "Exportar archivo rebanado"
