--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-01 11:55+0800\n"
+"POT-Creation-Date: 2022-11-03 16:29+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -741,6 +741,18 @@ msgstr "Schaal aanpassen aan printbed formaat"
 
 msgid "Scale an object to fit the build volume"
 msgstr "Object schalen zodat het op het prinbed past"
+
+msgid "Flush Options"
+msgstr ""
+
+msgid "Flush into objects' infill"
+msgstr "Flush in de opvulling van objecten"
+
+msgid "Flush into this object"
+msgstr "Flush in dit object"
+
+msgid "Flush into objects' support"
+msgstr "Flush in de support van objecten"
 
 msgid "Convert from inch"
 msgstr "Converenten vanuit inch"
@@ -4033,7 +4045,9 @@ msgstr ""
 msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
-msgid "Please check the following infomation:\n"
+msgid ""
+"Please check the following infomation and click Confirm to continue sending "
+"print:\n"
 msgstr ""
 
 msgid ""
@@ -4481,11 +4495,9 @@ msgstr ""
 
 msgid ""
 "You have changed some preset settings. \n"
-"Would you like to keep these changed settings after switching preset?"
+"Would you like to keep these changed settings (new value) after switching "
+"preset?"
 msgstr ""
-"U hebt enkele voorinstellingen gewijzigd.\n"
-"Wilt u deze gewijzigde instellingen behouden na het wisselen van "
-"voorinstelling?"
 
 msgid "Extruders count"
 msgstr "Extruder aantal"
@@ -7146,9 +7158,6 @@ msgstr "Breedte"
 msgid "Width of prime tower"
 msgstr "Dit is de breedte van de prime toren."
 
-msgid "Flush into objects' infill"
-msgstr "Flush in de opvulling van objecten"
-
 msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
@@ -7156,17 +7165,11 @@ msgid ""
 "outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
-msgid "Flush into objects' support"
-msgstr "Flush in de support van objecten"
-
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
 "lower the amount of waste and decrease the print time. It will not take "
 "effect, unless the prime tower is enabled."
 msgstr ""
-
-msgid "Flush into this object"
-msgstr "Flush in dit object"
 
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
@@ -7530,6 +7533,14 @@ msgid ""
 "Did you know that you can set slicing parameters for all selected objects at "
 "one time?"
 msgstr ""
+
+#~ msgid ""
+#~ "You have changed some preset settings. \n"
+#~ "Would you like to keep these changed settings after switching preset?"
+#~ msgstr ""
+#~ "U hebt enkele voorinstellingen gewijzigd.\n"
+#~ "Wilt u deze gewijzigde instellingen behouden na het wisselen van "
+#~ "voorinstelling?"
 
 #~ msgid "Export sliced file"
 #~ msgstr "Exporteer het \"sliced\" bestand"
